--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "knex-logger": "^0.1.0",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.11.0",
-    "pg": "^7.9.0"
+    "pg": "^7.9.0",
+    "twilio": "^3.29.2"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
