--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "knex": "^0.16.3",
     "knex-logger": "^0.1.0",
     "morgan": "^1.7.0",
+    "ngrok": "^3.1.1",
     "node-sass-middleware": "^0.11.0",
     "pg": "^7.9.0",
     "twilio": "^3.29.2"
